--- a/Ages/Views/Shared/_Layout.cshtml
+++ b/Ages/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
     <link rel="manifest" href="/Imagens/site.webmanifest">
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/IndexGlobal.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Oswald&family=Righteous&family=Roboto+Condensed:wght@300&display=swap" ;rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ages: The Game!</title>
