--- a/Ages/wwwroot/css/Termos/index.css
+++ b/Ages/wwwroot/css/Termos/index.css
@@ -1,6 +1,4 @@
-﻿@import url(<link href="https://fonts.googleapis.com/css2?family=Oswald&family=Righteous&family=Roboto+Condensed:wght@300&display=swap";
-
-rel="stylesheet" > );
+﻿
 body {
     background-color: #313354 !important;
     background-image: none !important;
