--- a/Ages/wwwroot/css/Jogar/index.css
+++ b/Ages/wwwroot/css/Jogar/index.css
@@ -60,16 +60,55 @@ body {
    
     border-radius: 50px;
     font-family: 'Righteous', sans-serif;
-    
+
     height: 530px;
     width: 900px;
     max-width: 100%;
+ 
 }
 .jogo img {
         width: 100%;
         height: 100%;
+
         
 }
+
+@media (max-width: 570px) {
+    .jogo {
+        width: 100%; /* Garante que o container ocupe toda a largura disponível */
+        height: auto; /* Define a altura como automática para manter a proporção da imagem */
+        max-width: 900px; /* Define a largura máxima */
+    }
+
+        .jogo img {
+            width: 100%; /* Garante que a imagem ocupe toda a largura do container */
+            height: auto; /* Define a altura como automática para manter a proporção */
+            max-width: 100%; /* Garante que a imagem não ultrapasse os limites do container */
+            max-height: 100%; /* Garante que a imagem não ultrapasse os limites do container */
+        }
+}
+
+
+@media (max-width: 790px) {
+    .pass,
+    .pass2 {
+        height: fit-content !important;
+    }
+
+   
+}
+
+@media (max-width: 570px) {
+
+    .timer {
+        transform: scale(0.7);
+        margin-right: -35px;
+    }
+   
+}
+
+
+
 
 .imagem {
     border-radius: 50px !important;
@@ -173,16 +212,20 @@ datalist {
     width: 160px;
 
 }
+#fixado{
+    z-index: 215 !important;
 
+}
 
 .timer {
-  
     width: 250px;
     height: 250px;
     position: absolute;
     top: 0;
     right: 0;
+    margin-top: -75px;
 }
+
 
 .path--background {
     fill: #C57ED9;
@@ -219,8 +262,8 @@ datalist {
     position: relative;
     border: none;
     transform: rotate(-90deg) scale(1, 1);
-    margin-top: 20px;
-    z-index: 77;
+
+    z-index: 777;
 }
 
 .arrow path {
@@ -304,7 +347,7 @@ datalist {
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 99; /* garante que o overlay esteja acima de todos os outros elementos */
+    z-index: 998; /* garante que o overlay esteja acima de todos os outros elementos */
     opacity: 0; /* definir a opacidade inicial */
     transition: opacity 0.5s ease, visibility 0s linear 0.5s; /* adicionar transição para a opacidade */
     visibility: hidden; /* ocultar o overlay sem afetar a transição de opacidade */
@@ -417,4 +460,9 @@ datalist {
     letter-spacing: 12px;
     color: #fff;
     left: 15%;
+}
+
+.correto {
+    background-color: #A1FF9F !important;
+    border: 1px solid black;
 }
